--- a/style.css
+++ b/style.css
@@ -234,7 +234,24 @@ div.photo {
       bottom: 0;
       width: 100%;
       height: 5rem;
+      overflow: hidden;
     }
+    .nav-link i {
+      width: 1rem;
+      color: #ff7eee;
+      min-width:0.1rem;
+      margin: 0 1.0rem;
+      margin-left: 0.3rem;
+    }
+    .nav-link svg {
+      width: 1rem;
+      min-width: 1rem;
+      margin: 0 1.5rem;
+    }
+  
+    
+    .material-icons.md-36 { font-size:24px; }
+
     #hobbydiv{
       position: static;
     top: 300px;
