--- a/style.css
+++ b/style.css
@@ -39,17 +39,8 @@
   margin-right: auto;
  
 }
-  #introductiondiv{
-    position: static;
-	top: 300px;
-	text-align: center;
-      left: 0;
-      right: 0;
-      margin-left: auto;
-      margin-right: auto;
 
-  }
-  .headerdiv{
+  .headerdiv, #contactdiv, #introductiondiv{
     position: static;
 	top: 300px;
 	text-align: center;
@@ -261,6 +252,7 @@ div.photo {
         margin-left: auto;
         margin-right: auto;
     }
+
     div.photo {
       margin: 5px;
       border: 1px solid #ccc;
