--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@
     margin: 0;
  
   }
+  .default{
+    color: black;
+    
+    margin: 0;
+  }
   #profilepicdiv{
 
     width: 250px;
@@ -49,6 +54,18 @@
       margin-left: auto;
       margin-right: auto;
 
+  } .darkk {
+    color:#b6b6b6;
+    z-index: -1;
+  }
+  
+  .solark {
+    color:#35535c;
+    z-index: -1;
+  }
+  .lightk {
+    color:#000000;
+    z-index: -1;
   }
 
   h1{
@@ -56,6 +73,7 @@
     font-weight: 600;
     transition: all 0.4s;
 }
+
   .big{
     font-size: 5rem;
     font-weight: 900;
@@ -372,7 +390,9 @@ margin-bottom: 800px;
     --bg-primary: #23232e;
     --bg-secondary: #141418;
 
+
   }
+  
   
   .light {
     --text-primary: #1f1f1f;
@@ -403,3 +423,4 @@ margin-bottom: 800px;
   .solar #solarIcon {
     display: block;
   }  
+  
