--- a/style.css
+++ b/style.css
@@ -265,7 +265,10 @@ div.photo {
       font-weight: 600;
     
   }
-  
+  #gallerydiv{
+padding:20px;
+margin-bottom: 100px;
+  }
     
     .material-icons.md-36 { font-size:24px; }
 
@@ -277,6 +280,7 @@ div.photo {
         right: 0;
         margin-left: auto;
         margin-right: auto;
+        margin-bottom: 100px;
     }
 
     div.photo {
